--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
   </head>
   <body>
     <main>
-      <figure class="card">
-        <img src="./images//image-qr-code.png" alt="QR code" />
-        <div class="content text-red-200">
-          <h1>Improve your front-end skills by building projects</h1>
-          <p>
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
-        </div>
-      </figure>
+      <section>
+        <figure class="card">
+          <img src="./images/image-qr-code.png" alt="QR code" />
+          <div class="content text-red-200">
+            <h1>Improve your front-end skills by building projects</h1>
+            <p>
+              Scan the QR code to visit Frontend Mentor and take your coding
+              skills to the next level
+            </p>
+          </div>
+        </figure>
+      </section>
     </main>
   </body>
 </html>
